Added histogram styles; Matured StatsPanel's stats; Improved logging; Filled gaps re controlling doc shape.